Fix bug in Sandbox editor where overflowing lines would increase the width of the editor instead of bringing up a horizontal scrollbar.

--- a/examples/Sandbox/scss/_editor.scss
+++ b/examples/Sandbox/scss/_editor.scss
@@ -4,6 +4,7 @@
 	overflow: hidden;
 
 	&-container {
+		max-width: 100%;
 		overflow-y: scroll;
 
 		> :not(:last-child) {
