--- a/examples/Sandbox/scss/_global.scss
+++ b/examples/Sandbox/scss/_global.scss
@@ -15,7 +15,7 @@ body {
 		#141414 75%,
 		#141414 100%
 	);
-	background-size: 11.31px 11.31px;
+	background-size: 11px 11px;
 	color: #fcfcfc;
 	font-family: "Arial", sans-serif;
 }
@@ -35,7 +35,8 @@ body,
 		margin-right: 10px;
 	}
 	&__section {
-		flex: 1;
+		// flex: 1;
+		width: 50%;
 		display: flex;
 		flex-direction: column;
 	}
